[tool.poetry]
name = "fleetchain"
version = "0.0.1"
description = ""
authors = ["Boris Tvaroska <boris@tvaroska.sk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
flet = ">=0.17.0,<0.18.0"
pydantic = ">=2.0.0,<2.6.0"
langchain-core = ">=0.1.0, <0.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.12.1"
tox = "^4.11.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
